--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                                 <h6>Introduce</h6>
                             </div>
                             <div class="welcome-box">
-                                <h3>Welcome to<span>Smith Design</span></h3>
+                                <h3>Welcome to<span>Phaphontee's World</span></h3>
                             </div>
                             <div class="name-box">
-                                <h1>Hello my name is  <span>Stive Smith.</span></h1>
+                                <h1>Hello my name is  <span>Phaphontee Yamchote.</span></h1>
                             </div>
                             <div class="line"></div>
                         </div>
@@ -79,11 +79,9 @@
                                 <div class="content">
                                     <div class="title">
                                         <h4>About me</h4>
-                                        <h2>MY MISSION IS <span>DESIGN & DEVELOP</span>
-                                        THE BEST WEBSITES AROUND</h2>
-                                        <p>I love everything that has to do with Web design & development, 
-                                        Graphic design, and I feel a true devotion for typography. 
-                                        I have 3 years of experience working as a UI Developer</p>
+                                        <h2><span>TEACHING</span> TO IMPROVE LEANERS
+                                        IS MY MOTIVATION TO LIVE</h2>
+                                        <p>Teaching Mathematics, Computer Science and Programming</p>
                                     </div>
                                 </div>
                             </div>
@@ -91,29 +89,47 @@
                                 <div class="content _yt_er_ol">
                                     <div class="_re_uy_iu">
                                         <div class="_ol_ew_xs">
-                                            <span>UI Development</span>
-                                            <span>70%</span>
+                                            <span>คณิตศาสต ม.ปลาย ตามหลักสูตร</span>
+                                            <span>100%</span>
                                         </div>
                                         <div class="progress">
-                                            <div style="width: 70%;" class="progress-bar my-bars" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div style="width: 100%;" class="progress-bar my-bars" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                     </div>
                                     <div class="_re_uy_iu">
                                         <div class="_ol_ew_xs">
-                                            <span>Design Concepts</span>
-                                            <span>65%</span>
+                                            <span>คณิตศาสตร์ ม.ปลาย สอบแข่งขัน</span>
+                                            <span>80%</span>
                                         </div>
                                         <div class="progress">
-                                            <div style="width: 65%;" class="progress-bar my-bars" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div style="width: 80%;" class="progress-bar my-bars" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                     </div>
                                     <div class="_re_uy_iu">
                                         <div class="_ol_ew_xs">
-                                            <span>Communication</span>
-                                            <span>30%</span>
+                                            <span>คณิตศาสตร์ ป.ตรี</span>
+                                            <span>100%</span>
                                         </div>
                                         <div class="progress">
-                                            <div style="width: 30%;" class="progress-bar my-bars" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div style="width: 100%;" class="progress-bar my-bars" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                    </div>
+                                    <div class="_re_uy_iu">
+                                        <div class="_ol_ew_xs">
+                                            <span>สถิตเพื่อการทำวิจัย</span>
+                                            <span>60%</span>
+                                        </div>
+                                        <div class="progress">
+                                            <div style="width: 60%;" class="progress-bar my-bars" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                    </div>
+                                    <div class="_re_uy_iu">
+                                        <div class="_ol_ew_xs">
+                                            <span>โปรแกรมมิ่ง</span>
+                                            <span>90%</span>
+                                        </div>
+                                        <div class="progress">
+                                            <div style="width: 90%;" class="progress-bar my-bars" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -138,14 +154,10 @@
                                     <div class="list-inner">
                                         <ol>
                                             <li>
-                                                <h4>Diploma in Multimedia</h4>
-                                                <h6>Animation Center Chennai</h6>
-                                                <span>Sep 05 2015 to Sep 05 2016 </span>
-                                                <p>Every year, the number of people using the Internet is 
-                                                increased to twice that of the previous year. Also, the increase 
-                                                in various internet-enabled devices like Mobile, Tablet, PC, 
-                                                and TV have turned over a new era in the progress 
-                                                of Web development.</p>
+                                                <h4>Ph. D. Computer Science</h4>
+                                                <h6>Faculty of ICT, Mahidol University</h6>
+                                                <span>Aug 2021 to Present </span>
+                                                <p>....</p>
                                             </li>
 
                                             <li>
