--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="container">
                         <div class="main-nav">
                             <div class="logo">
-                                <h2>Stive Smith</h2>
+                                <h2>Toey</h2>
                             </div>
                             <div class="social-media">
                                 <ul>
@@ -60,7 +60,7 @@
                                 <h3>Welcome to<span>Phaphontee's World</span></h3>
                             </div>
                             <div class="name-box">
-                                <h1>Hello my name is  <span>Phaphontee Yamchote.</span></h1>
+                                <font color="#ffffff">My name is</font> <h1>  <span>Phaphontee Yamchote.</span></h1>
                             </div>
                             <div class="line"></div>
                         </div>
