add education and exp

--- a/index.html
+++ b/index.html
@@ -79,9 +79,14 @@
                                 <div class="content">
                                     <div class="title">
                                         <h4>About me</h4>
-                                        <h2><span>TEACHING</span> TO IMPROVE LEANERS
-                                        IS MY MOTIVATION TO LIVE</h2>
-                                        <p>Teaching Mathematics, Computer Science and Programming</p>
+                                        <h2>
+                                            <span>TEACHING</span> TO IMPROVE LEANERS<br>
+                                            <span>RESEARCHING</span> TO IMPROVE MYSELF FOR TEACHING
+                                        </h2>
+                                        <p>
+                                            <b>Teaching Mathematics, Computer Science and Programming:</b><br>
+                                            including thier application such as Data Science, Machine Learning, Artificial Intelligence
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -154,18 +159,40 @@
                                     <div class="list-inner">
                                         <ol>
                                             <li>
-                                                <h4>Ph. D. Computer Science</h4>
+                                                <h4>Ph.D. Computer Science</h4>
                                                 <h6>Faculty of ICT, Mahidol University</h6>
                                                 <span>Aug 2021 to Present </span>
-                                                <p>....</p>
+                                                <p>
+                                                    <span>Study theme:</span> Machine learning and deep learning techniques in data science task
+                                                </p>
+                                                <p>
+                                                    <span>Coursework:</span> Computational Theory, Design and Analysis of Algorithms, Natural Language Processing, Deep Learning, Graph Neural Networks
+                                                </p>
+                                            </li>
+                                            <li>
+                                                <h4>M.Sc. Mathematics</h4>
+                                                <h6>Department of Mathematics and Computer Science, Faculty of Science, Chulalongkorn University</h6>
+                                                <span>Aug 2017 to Jan 2021 </span>
+                                                <p>
+                                                    <span>Study theme:</span> Application of mathematical logic on structures in mathematics: o-minimality and its generalization
+                                                </p>
+                                                <p>
+                                                    <span>Thesis:</span> Smooth Approximations of Continuous Functions Definable in D-minimal Structures (<a href="https://digiverse.chula.ac.th/Info/item/dc:93284">access</a>)
+                                                </p>
+                                            </li>
+                                            <li>
+                                                <h4>B.Sc. Mathematics</h4>
+                                                <h6>Department of Mathematics and Computer Science, Faculty of Science, Chulalongkorn University</h6>
+                                                <span>May 2012 to Jun 2016 </span>
+                                                <p>
+                                                    <span>Study theme:</span> Study all fundamental concept of mathematics including pure math and applied math.
+                                                    I was interested in properties of algebraic structures in mathematics.
+                                                </p>
+                                                <p>
+                                                    <span>Senior Project:</span> Some Properties of 2-absorbing R&Gamma;-submodules of R&Gamma;-modules
+                                                </p>
                                             </li>
 
-                                            <li>
-                                                <h4>+2</h4>
-                                                <h6>Tamilnadu</h6>
-                                                <span>13-06-2012 to 01-03-2014</span>
-                                                
-                                            </li>
                                         </ol>
                                     </div>
                                 </div>
@@ -178,12 +205,13 @@
                                     <div class="list-inner">
                                         <ol>
                                             <li>
-                                                <h4>Smarteye Technologies</h4>
-                                                <h6>Web Designer</h6>
-                                                <span>06-11-2017 Continued</span>
-                                                <p>Website Templates, Bootstrap Templates, 
-                                                PHP Scripts Web Design, Application Development, 
-                                                Technical Support</p>
+                                                <h4>Intern Researcher</h4>
+                                                <h6>Japan Advanced Institute of Science and Technology (JAIST)</h6>
+                                                <span>Jun 2024 - Aug 2024</span>
+                                                <p>
+                                                    Researched on the explainability of artificial intelligence<br>
+                                                    Studied and gave a talk about current data science and AI tools: Streamlit and Langchain
+                                                </p>
                                             </li>
                                         </ol>
                                     </div>
