add education and exp

--- a/index.html
+++ b/index.html
@@ -233,19 +233,22 @@
                                 <div class="content">
                                     <ul class="nav nav-tabs border-0" id="myTab" role="tablist">
                                         <li class="nav-item">
-                                            <a class="nav-link active" id="free-template" data-toggle="tab" href="#free" role="tab" aria-controls="free" aria-selected="true">Web Designing</a>
+                                            <a class="nav-link active" id="research-template" data-toggle="tab" href="#research" role="tab" aria-controls="research" aria-selected="true">Research</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" id="premium-template" data-toggle="tab" href="#premium" role="tab" aria-controls="premium" aria-selected="true">Graphic Designing</a>
+                                            <a class="nav-link" id="job-template" data-toggle="tab" href="#job" role="tab" aria-controls="job" aria-selected="true">Job</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" id="others-template" data-toggle="tab" href="#others" role="tab" aria-controls="others" aria-selected="true">Others</a>
+                                            <a class="nav-link" id="teaching-template" data-toggle="tab" href="#teaching" role="tab" aria-controls="teaching" aria-selected="true">Teaching</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" id="project-template" data-toggle="tab" href="#project" role="tab" aria-controls="project" aria-selected="true">Project</a>
                                         </li>
                                     </ul>
 
                                     <div class="tab-content" id="myTabContent">
                                         <!-- ------------***----------- -->
-                                        <div class="tab-pane fade show active" id="free" role="tabpanel" aria-labelledby="free-template">
+                                        <div class="tab-pane fade show active" id="research" role="tabpanel" aria-labelledby="research-template">
                                             <div class="content-list">
                                                 <ol>
                                                     <li>
@@ -258,81 +261,11 @@
                                                             </figure>
                                                         </div>
                                                     </li>
-                                                    <li>
-                                                        <div class="_ok-vd_zs">
-                                                            <figure>
-                                                                <img src="assets/images/abt/2.jpg">
-                                                                <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
-                                                                </div>
-                                                            </figure>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="_ok-vd_zs">
-                                                            <figure>
-                                                                <img src="assets/images/abt/3.jpg">
-                                                                <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
-                                                                </div>
-                                                            </figure>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="_ok-vd_zs">
-                                                            <figure>
-                                                                <img src="assets/images/abt/4.jpg">
-                                                                <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
-                                                                </div>
-                                                            </figure>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="_ok-vd_zs">
-                                                            <figure>
-                                                                <img src="assets/images/abt/5.jpg">
-                                                                <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
-                                                                </div>
-                                                            </figure>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="_ok-vd_zs">
-                                                            <figure>
-                                                                <img src="assets/images/abt/6.jpg">
-                                                                <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
-                                                                </div>
-                                                            </figure>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="_ok-vd_zs">
-                                                            <figure>
-                                                                <img src="assets/images/abt/7.jpg">
-                                                                <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
-                                                                </div>
-                                                            </figure>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="_ok-vd_zs">
-                                                            <figure>
-                                                                <img src="assets/images/abt/8.jpg">
-                                                                <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
-                                                                </div>
-                                                            </figure>
-                                                        </div>
-                                                    </li>
                                                 </ol>
                                             </div>
                                         </div>
                                         <!-- ------------***----------- -->
-                                        <div class="tab-pane fade " id="premium" role="tabpanel" aria-labelledby="premium-template">
+                                        <div class="tab-pane fade " id="job" role="tabpanel" aria-labelledby="job-template">
                                             <div class="content-list">
                                                 <ol>
                                                     <li>
@@ -345,116 +278,16 @@
                                                             </figure>
                                                         </div>
                                                     </li>
-                                                    <li>
-                                                        <div class="_ok-vd_zs">
-                                                            <figure>
-                                                                <img src="assets/images/abt/6.jpg">
-                                                                <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
-                                                                </div>
-                                                            </figure>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="_ok-vd_zs">
-                                                            <figure>
-                                                                <img src="assets/images/abt/7.jpg">
-                                                                <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
-                                                                </div>
-                                                            </figure>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="_ok-vd_zs">
-                                                            <figure>
-                                                                <img src="assets/images/abt/8.jpg">
-                                                                <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
-                                                                </div>
-                                                            </figure>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="_ok-vd_zs">
-                                                            <figure>
-                                                                <img src="assets/images/abt/1.jpg">
-                                                                <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
-                                                                </div>
-                                                            </figure>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="_ok-vd_zs">
-                                                            <figure>
-                                                                <img src="assets/images/abt/2.jpg">
-                                                                <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
-                                                                </div>
-                                                            </figure>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="_ok-vd_zs">
-                                                            <figure>
-                                                                <img src="assets/images/abt/3.jpg">
-                                                                <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
-                                                                </div>
-                                                            </figure>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="_ok-vd_zs">
-                                                            <figure>
-                                                                <img src="assets/images/abt/4.jpg">
-                                                                <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
-                                                                </div>
-                                                            </figure>
-                                                        </div>
-                                                    </li>
                                                 </ol>
                                             </div>
                                         </div>
                                         <!-- ------------***----------- -->
-                                        <div class="tab-pane fade " id="others" role="tabpanel" aria-labelledby="others-template">
+                                        <div class="tab-pane fade " id="teaching" role="tabpanel" aria-labelledby="teaching-template">
                                             <div class="content-list">
                                                <ol>
                                                     <li>
                                                         <div class="_ok-vd_zs">
                                                             <figure>
-                                                                <img src="assets/images/abt/1.jpg">
-                                                                <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
-                                                                </div>
-                                                            </figure>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="_ok-vd_zs">
-                                                            <figure>
-                                                                <img src="assets/images/abt/2.jpg">
-                                                                <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
-                                                                </div>
-                                                            </figure>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="_ok-vd_zs">
-                                                            <figure>
-                                                                <img src="assets/images/abt/3.jpg">
-                                                                <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
-                                                                </div>
-                                                            </figure>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="_ok-vd_zs">
-                                                            <figure>
                                                                 <img src="assets/images/abt/4.jpg">
                                                                 <div class="inner-content">
                                                                     <a href="#">Live Preview</a>
@@ -462,6 +295,24 @@
                                                             </figure>
                                                         </div>
                                                     </li>
+                                                    
+                                                </ol>
+                                            </div>
+                                        </div>
+                                        <div class="tab-pane fade " id="project" role="tabpanel" aria-labelledby="project-template">
+                                            <div class="content-list">
+                                               <ol>
+                                                    <li>
+                                                        <div class="_ok-vd_zs">
+                                                            <figure>
+                                                                <img src="assets/images/abt/6.jpg">
+                                                                <div class="inner-content">
+                                                                    <a href="#">Live Preview</a>
+                                                                </div>
+                                                            </figure>
+                                                        </div>
+                                                    </li>
+                                                    
                                                 </ol>
                                             </div>
                                         </div>
