--- a/index.html
+++ b/index.html
@@ -147,6 +147,54 @@
                 </div>
             </section>
             <!-- =================================********================================= -->
+            <section id="about">
+                <div class="container">
+                    <div class="row">
+                        <div class="wrapper">
+                            <div class="left-three-wrapper">
+                                <div class="content">
+                                    <div class="title">
+                                        <h4>What I have ever done</h4>
+                                        <h2>
+                                            <span>TEACHING</span> TO IMPROVE LEANERS<br>
+                                        </h2>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="center-three-wrapper">
+                                <div class="content _yt_er_ol">
+                                    <div class="_re_uy_iu">
+                                        <span>Programming Language</span>
+                                        <ul>
+                                            <li>คณิตศาสต ม.ปลาย ตามหลักสูตร</li>
+                                            <li>คณิตศาสตร์ ม.ปลาย สอบแข่งขัน</li>
+                                            <li>คณิตศาสตร์ ป.ตรี</li>
+                                            <li>คณิตศาสตร์ ป.ตรี</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="right-three-wrapper">
+                                <div class="content _yt_er_ol">
+                                    <div class="_re_uy_iu">
+                                        <span>Softwares</span>
+                                        <ul>
+                                            <li>คณิตศาสต ม.ปลาย ตามหลักสูตร</li>
+                                            <li>คณิตศาสตร์ ม.ปลาย สอบแข่งขัน</li>
+                                            <li>คณิตศาสตร์ ป.ตรี</li>
+                                            <li>คณิตศาสตร์ ป.ตรี</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="inter">
+                                <h6>WHAT I CAN DO</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- =================================********================================= -->
             <section id="resume">
                 <div class="container">
                     <div class="row">
